baml_language/crates/baml_tests/snapshots/diagnostic_errors/closure_errors/baml_tests__diagnostic_errors__closure_errors__03_ppir.snap
---
source: crates/baml_tests/src/generated_tests.rs
assertion_line: 41707
---
=== PPIR ===
class user.Counter {
  value: int
}
class user.Counter$stream {
  value: int | null
}
class user.Employee {
  first: string
  last: string
}
class user.Employee$stream {
  first: string | null
  last: string | null
}
class user.Formatter {
  prefix: string
}
class user.Formatter$stream {
  prefix: string | null
}
function user.format(self: ?, text: string) -> string  [expr] {
  {  } self.prefix Add text
}
function user.full_name(self: ?) -> string  [expr] {
  {  } self.first Add " " Add self.last
}
function user.increment(self: ?) -> int  [expr] {
  { self.value Add= 1 } self.value
}
function user.takes_unbound(f: (user.Employee) -> string) -> string  [expr] {
  { let e = user.Employee { first: "X", last: "Y" } } f(e)
}
function user.test_err_bound_for_unbound() -> string  [expr] {
  { let e = user.Employee { first: "Alice", last: "Smith" } } takes_unbound(e.full_name)
}
function user.test_err_bound_type_mismatch() -> int  [expr] {
  { let c = user.Counter { value: 0 }; let inc: (user.Counter) -> int throws never = c.increment } 0
}
function user.test_err_extra_arg() -> string  [expr] {
  { let fmt = user.Formatter { prefix: ">> " }; let transform = fmt.format } transform(fmt, "hello")
}
function user.test_err_missing_self() -> string  [expr] {
  { let f = Employee.full_name } f()
}
function user.test_err_unbound_type_mismatch() -> string  [expr] {
  { let f: () -> string throws never = Employee.full_name } ""
}
