baml_language/crates/baml_tests/snapshots/diagnostic_errors/closure_errors/baml_tests__diagnostic_errors__closure_errors__04_tir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== TIR2 ===
class user.Formatter {
  prefix: string
}
function user.Formatter.format(self: user.Formatter, text: string) -> string throws never {
  { : string
    self.prefix + text : string
  }
}
function user.Formatter.to_json(self: user.Formatter) -> baml.json.json throws baml.json.JsonSerializationError | baml.json.JsonParseError {
  map { "prefix": self.prefix.to_json() } : map<string, baml.json.json>
}
function user.Formatter.from_json(j: baml.json.json) -> user.Formatter throws baml.json.JsonParseError | baml.json.JsonDecodeError {
  baml.json.from_string<T>(baml.json.stringify(j)) : user.Formatter
}
class user.Counter {
  value: int
}
function user.Counter.increment(self: user.Counter) -> int throws never {
  { : int
    self.value Add= 1 : int
    self.value : int
  }
}
function user.Counter.to_json(self: user.Counter) -> baml.json.json throws baml.json.JsonSerializationError | baml.json.JsonParseError {
  map { "value": self.value.to_json() } : map<string, baml.json.json>
}
function user.Counter.from_json(j: baml.json.json) -> user.Counter throws baml.json.JsonParseError | baml.json.JsonDecodeError {
  baml.json.from_string<T>(baml.json.stringify(j)) : user.Counter
}
class user.Employee {
  first: string
  last: string
}
function user.Employee.full_name(self: user.Employee) -> string throws never {
  { : string
    self.first + " " + self.last : string
  }
}
function user.Employee.to_json(self: user.Employee) -> baml.json.json throws baml.json.JsonSerializationError | baml.json.JsonParseError {
  map { "first": self.first.to_json(), "last": self.last.to_json() } : map<string, baml.json.json>
}
function user.Employee.from_json(j: baml.json.json) -> user.Employee throws baml.json.JsonParseError | baml.json.JsonDecodeError {
  baml.json.from_string<T>(baml.json.stringify(j)) : user.Employee
}
function user.test_err_extra_arg() -> string throws never {
  { : string
    let fmt = Formatter { prefix: ">> " } : user.Formatter
    let transform = fmt.format : (text: string) -> string throws never
    transform(fmt, "hello") : string
  }
  !! 474..497: expected 1 argument(s), got 2
  !! 484..487: type mismatch: expected string, got user.Formatter
}
function user.test_err_missing_self() -> string throws never {
  { : string
    let f = Employee.full_name : (self: user.Employee) -> string throws never
    f() : string
  }
  !! 617..620: expected 1 argument(s), got 0
}
function user.test_err_bound_type_mismatch() -> int throws never {
  { : 0
    let c = Counter { value: 0 } : user.Counter
    let inc: (Counter) -> int = c.increment : () -> int throws never -> (user.Counter) -> int throws never
    0 : 0
  }
  !! 789..801: type mismatch: expected (user.Counter) -> int throws never, got () -> int throws never
}
function user.test_err_unbound_type_mismatch() -> string throws never {
  { : ""
    let f: () -> string = Employee.full_name : (self: user.Employee) -> string throws never -> () -> string throws never
    "" : ""
  }
  !! 947..966: type mismatch: expected () -> string throws never, got (self: user.Employee) -> string throws never
}
function user.takes_unbound(f: (user.Employee) -> string throws never) -> string throws never {
  { : string
    let e = Employee { first: "X", last: "Y" } : user.Employee
    f<__effect_param_0>(e) : string
  }
}
function user.test_err_bound_for_unbound() -> string throws never {
  { : string
    let e = Employee { first: "Alice", last: "Smith" } : user.Employee
    takes_unbound<__effect_param_0>(e.full_name) : string
  }
  !! 1259..1270: type mismatch: expected (user.Employee) -> string throws never, got () -> string throws never
}
class user.Formatter$stream {
  prefix: null | string
}
class user.Counter$stream {
  value: null | int
}
class user.Employee$stream {
  first: null | string
  last: null | string
}
