baml_language/crates/baml_tests/snapshots/diagnostic_errors/closure_errors/baml_tests__diagnostic_errors__closure_errors__05_diagnostics.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== COMPILER2 DIAGNOSTICS ===
  [type] Error: expected 1 argument(s), got 2
    ╭─[ closure_errors.baml:21:3 ]
    │
 21 │   transform(fmt, "hello")
    │   ───────────┬───────────  
    │              ╰───────────── expected 1 argument(s), got 2
    │ 
    │ Note: Error code: E0005
────╯

  [type] Error: type mismatch: expected string, got user.Formatter
    ╭─[ closure_errors.baml:21:13 ]
    │
 21 │   transform(fmt, "hello")
    │             ─┬─  
    │              ╰─── type mismatch: expected string, got user.Formatter
    │ 
    │ Note: Error code: E0001
────╯

  [type] Error: expected 1 argument(s), got 0
    ╭─[ closure_errors.baml:27:3 ]
    │
 27 │   f()
    │   ─┬─  
    │    ╰─── expected 1 argument(s), got 0
    │ 
    │ Note: Error code: E0005
────╯

  [type] Error: type mismatch: expected (user.Counter) -> int throws never, got () -> int throws never
    ╭─[ closure_errors.baml:33:30 ]
    │
 33 │   let inc: (Counter) -> int = c.increment;
    │                              ──────┬─────  
    │                                    ╰─────── type mismatch: expected (user.Counter) -> int throws never, got () -> int throws never
    │ 
    │ Note: Error code: E0001
────╯

  [type] Error: type mismatch: expected () -> string throws never, got (self: user.Employee) -> string throws never
    ╭─[ closure_errors.baml:39:24 ]
    │
 39 │   let f: () -> string = Employee.full_name;
    │                        ─────────┬─────────  
    │                                 ╰─────────── type mismatch: expected () -> string throws never, got (self: user.Employee) -> string throws never
    │ 
    │ Note: Error code: E0001
────╯

  [type] Error: type mismatch: expected (user.Employee) -> string throws never, got () -> string throws never
    ╭─[ closure_errors.baml:50:17 ]
    │
 50 │   takes_unbound(e.full_name)
    │                 ─────┬─────  
    │                      ╰─────── type mismatch: expected (user.Employee) -> string throws never, got () -> string throws never
    │ 
    │ Note: Error code: E0001
────╯
